# redis

./: .gitignore  CMakeLists.txt  Makefile  README.md  appendonly.aof  main.c  sds.c  sds.h  ziplist.c  ziplist.h  zskiplist.c  zskiplist.h
src/: adlist.c  adlist.h  anet.c  anet.h  aof.c  bio.c  bio.h  blocked.c  config.c  config.h  crc.c  crc.h  crc16.c  crc16.h  crc8.c  crc8.h  db.c  dict.c  dict.h  el.c  el.h  el_select.c  evict.c  expire.c  multi.c  networking.c  object.c  pubsub.c  quicklist.c  quicklist.h  redis.c  redis.h  replication.c  rio.c  rio.h  sds.c  sds.h  server.c  server.h  syncio.c  (+10 more)
